fix candidate info overlap

--- a/styles/voters.module.css
+++ b/styles/voters.module.css
@@ -66,7 +66,7 @@
   background-color: rgba(200, 200, 200, 0.2);
   box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.2);
   width: 100%;
-  height: 11.5rem;
+  height: 12rem;
   margin: auto;
 }
 
@@ -77,11 +77,12 @@
   object-fit: cover;
   margin: 0;
   padding: 0;
-  /* border: 1px solid red; */
 }
 .profile_cont {
-  padding: 0.5rem;
+  padding: 0.3rem;
   width: 45%;
+  overflow: auto;
+  word-break: break-word;
   text-align: center;
   display: flex;
   flex-direction: column;
